--- a/core/page/css/main.less
+++ b/core/page/css/main.less
@@ -2,6 +2,7 @@
 
 // layout general
 	/**/
+	@import "./layout/vars.less";
 	@import "./layout/reset.less";
 	@import "./layout/fonts.less";
 	@import "./layout/layout.less";
