--- a/core/page/css/layout/page.less
+++ b/core/page/css/layout/page.less
@@ -7,14 +7,12 @@ html {
 	//margin-left: calc(100vw - 100%);
 	margin-right: calc(100vw - 100%);
 }
-
-	b, strong {
-		font-weight: bold;
-	}
-
-	i, em {
-		font-style: italic;
-	}
+b, strong {
+	font-weight: bold;
+}
+i, em {
+	font-style: italic;
+}
 
 
 
@@ -27,14 +25,12 @@ html {
 
 
 
-
-
-
-
 // active. selected_wrap
 	.active {
-		//transition: background-color 0.3s ease;
-		background-color: @color_grey_medium !important; // rgb(230, 230, 230)
+		&.wrapper_component {
+			//transition: background-color 0.3s ease;
+			background-color: @color_grey_medium !important; // rgb(230, 230, 230)
+		}
 	}
 // error
 	.error {
