--- a/core/page/css/main.less
+++ b/core/page/css/main.less
@@ -5,6 +5,7 @@
 	@import "./layout/vars.less";
 	@import "./layout/reset.less";
 	@import "./layout/fonts.less";
+	@import "./layout/buttons.less";
 	@import "./layout/layout.less";
 	@import "./layout/page.less";
 
