--- a/core/search/css/search.less
+++ b/core/search/css/search.less
@@ -274,6 +274,8 @@
 							border: 1px solid #ffffff;
 							border-radius: 0.25em;
 
+							width: 96%;
+
 							&:hover {
 								background-color: darken(#f99c29, 10%);
 							}
