Full screen ready in vector_editor

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1299,6 +1299,9 @@
 						.pointer {
 							.add_mask('pointer.svg');
 						}
+						.pointer_alt {
+							.add_mask('pointer_alt.svg');
+						}
 						.transform {
 							.add_mask('pointer.svg');
 						}
