Fix search tooltip view on large text

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1766,12 +1766,12 @@
 			border-radius: 5px;
 			font-size: .8em;
 			width: 100%;
-			max-width: 200px;
+			max-width: 20em;
 			// display: block !important;
 
 			>.search_options_title_item {
 				display: grid;
-				grid-template-columns: 1fr 2fr;
+				grid-template-columns: 1fr 3fr;
 
 				>span:first-of-type {
 					text-align: center;
