--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -33,6 +33,7 @@
 	// button generic to apply to span elements
 	.button { // @icon_name:null, @color:black, @opacity:0.7, @size:1em
 		cursor: pointer;
+		user-select: none;
 		display: inline-block;
 		width: 1em;
 		height: 1em;
