Layer comments and new raster layer behavior

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1007,6 +1007,7 @@
 								color: initial;
 							}
 
+
 							.layer_icon {
 								height: 30px;
 							}
@@ -1241,11 +1242,15 @@
 									&:hover {
 										background-color: #ffa03f;
 										color: #ffffff;
+										&.raster_layer{
+											background-color: #ffffff;
+											color: initial;
+										}
 									}
 									&:active {
 										background-color: #ffa03f;
 										color: #000;
-									}
+									}								
 									&.active{
 										background-color: #e6e6e6;
 										color: #000;
