Fix css issues with svg items

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -809,7 +809,7 @@
 					// left: 100%;
 					// right: 0;
 					z-index: 1;
-					background-color: #ffa03f;
+					background-color: @color_orange_dedalo;
 					height: 100%;
 					box-shadow: 2px 2px 5px 0 rgba(38, 38, 38, 0.3);
 					border-top-right-radius: 0.25em;
@@ -964,7 +964,7 @@
 			&.component_text_area {
 				.layer_selector{
 					width: 10em;
-					background-color: #ffa03f;
+					background-color: @color_orange_dedalo;
 					position: absolute;
 					right: 0;
 					top: 0;
@@ -998,7 +998,7 @@
 							background-color: #ffffff;
 
 							&:hover {
-								background-color: #ffa03f;
+								background-color: @color_orange_dedalo;
 								color: #ffffff;
 							}
 							&:active {
@@ -1203,7 +1203,7 @@
 						.layer_selector {
 							float: right;
 							width: 11em;
-							background-color: #ffa03f;
+							background-color: @color_orange_dedalo;
 							position: absolute;
 							right: 2em;
 							top: 0;
@@ -1239,7 +1239,7 @@
 									background-color: #ffffff;
 
 									&:hover {
-										background-color: #ffa03f;
+										background-color: @color_orange_dedalo;
 										color: #ffffff;
 										&.raster_layer{
 											background-color: #ffffff;
@@ -1247,7 +1247,7 @@
 										}
 									}
 									&:active {
-										background-color: #ffa03f;
+										background-color: @color_orange_dedalo;
 										color: #000;
 									}
 									&.active{
@@ -1415,7 +1415,7 @@
 					// // 3
 					// left: 100%;
 					// z-index: 1;
-					// background-color: #ffa03f;
+					// background-color: @color_orange_dedalo;
 					// height: 100%;
 					// box-shadow: 2px 2px 5px 0 rgba(38, 38, 38, 0.3);
 					// border-top-right-radius: 0.25em;
