--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -218,12 +218,13 @@
 			>.widget_label {
 				padding: 1em;
 				//background-color: #73A266;
-				background-color: #f48c1c;
+				background-color: @color_orange_dedalo;
 				color: #ffffff;
 				//font-weight: 600;
 				text-transform: uppercase;
 				letter-spacing: 0.025em;
 				user-select: none;
+				cursor: pointer;
 
 				&:before {
 					content: " ";
